add paggnation to booking queries, add status filter to users boookings
